@@ -128,7 +128,7 @@ public abstract class ServerContainer {
     configuration.setProperty(GeneralPropertySet.LOGGING, loggingLevel);
     // Removes secureRandom generation so that container startup is much faster
     configuration.setProperty(GeneralPropertySet.JVMARGS,
-        "-Djava.security.egd=file:/dev/./urandom -Xmx128m -Xms64m");
+        "-Djava.security.egd=file:/dev/./urandom -Xmx256m -Xms64m");
 
     // Setup the gemfire log file for this container
     gemfireLogFile = new File(cargoLogDir.getAbsolutePath() + "/gemfire.log");
@@ -202,6 +202,7 @@ public abstract class ServerContainer {
           " --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED" +
           " --add-opens java.base/jdk.internal.misc=ALL-UNNAMED" +
           " --add-opens java.base/jdk.internal.ref=ALL-UNNAMED" +
+          " --add-opens java.base/jdk.internal.platform.cgroupv1=ALL-UNNAMED" +
           " --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED";
     }
     config.setProperty(GeneralPropertySet.START_JVMARGS, jvmArgs);
